-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 17
-
Component/s: client-libs
-
Environment:
bash configure --with-debug-level=release --with-jvm-variants=client,server --with-target-bits=32 --target=x86
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8278646 | 19 | Alexander Zuev | P3 | Resolved | Fixed | b02 |
| JDK-8281714 | 17.0.3 | Goetz Lindenmaier | P3 | Resolved | Fixed | b02 |
Workaround is to set stack size, e.g. -Xss1m
Reproduces with
import javax.swing.UIManager;
public class Repro {
public static void main(final String... args) throws Exception {
UIManager.setLookAndFeel("com.sun.java.swing.plaf.windows.WindowsLookAndFeel");
UIManager.getIcon("Tree.openIcon"); // Same with "Tree.closedIcon" and "Tree.leafIcon"
}
}
- backported by
-
JDK-8278646 STACK_OVERFLOW in Java_sun_awt_shell_Win32ShellFolder2_getIconBits
-
- Resolved
-
-
JDK-8281714 STACK_OVERFLOW in Java_sun_awt_shell_Win32ShellFolder2_getIconBits
-
- Resolved
-
- relates to
-
JDK-8182043 Access to Windows Large Icons
-
- Resolved
-
- links to
-
Commit
openjdk/jdk17u-dev/2965051f
-
Commit
openjdk/jdk18/94127f43
-
Review
openjdk/jdk17u-dev/98
-
Review
openjdk/jdk18/12
-
Review
openjdk/jdk/6473