8277299: STACK_OVERFLOW in Java_sun_awt_shell_Win32ShellFolder2_getIconBits

Made colorBits and maskBits arraus dynamic so they allocated on heap instead of stack.
Added regression test.